--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,13 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-csv</artifactId>
-      <version>1.8</version> <!-- Use a versão mais recente disponível -->
+      <version>1.8</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-xml</artifactId>
+      <version>2.15.2</version>
     </dependency>
   </dependencies>
 
