--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,23 @@
       <version>1.8</version>
     </dependency>
 
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+     <version>2.13.3</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-csv</artifactId>
+      <version>2.13.3</version>
+    </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.dataformat</groupId>
       <artifactId>jackson-dataformat-xml</artifactId>
-      <version>2.15.2</version>
+      <version>2.13.3</version>
     </dependency>
+
   </dependencies>
 
   <build>
