--- a/softflowdemo/src/main/resources/application.properties
+++ b/softflowdemo/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/softflowdemo
+spring.datasource.username=postgres
+spring.datasource.password=interflag
 
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
