--- a/softflowdemo/src/main/resources/application.properties
+++ b/softflowdemo/src/main/resources/application.properties
@@ -1,6 +1,24 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/softflowdemo
-spring.datasource.username=postgres
-spring.datasource.password=interflag
-spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=pg
+#spring.profiles.active=sqlite
+#spring.profiles.active=mongo
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.hibernate.orm.jdbc.bind=trace
+logging.level.ufc.quixada=trace
+
+#spring.datasource.url= jdbc:postgresql://localhost:5432/softflowdemo
+#spring.datasource.username=postgres
+#spring.datasource.password=admin
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.data.mongodb.host=mongo
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=softflowdemo
+spring.data.mongodb.username=llucasanthony
+spring.data.mongodb.password=admin
+
+spring.data.mongodb.uri=mongodb+srv://llucasanthony:admin@cluster0.5ncgpbn.mongodb.net/softflowdemo
