--- a/softflowdemo/src/main/resources/application-pg.properties
+++ b/softflowdemo/src/main/resources/application-pg.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/dspersist2023
+spring.datasource.url=jdbc:postgresql://localhost:5432/softflowdemo
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=admin
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
