--- a/softflowdemo/src/main/resources/application-sqlite.properties
+++ b/softflowdemo/src/main/resources/application-sqlite.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:sqlite::resource:dspersist2023.db
-spring.datasource.username=sa
-spring.datasource.password=sa
+ spring.datasource.url=jdbc:sqlite::resource:softflowdemo.db
+ spring.datasource.username=sa
+ spring.datasource.password=sa
 
-spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
-spring.jpa.properties.hibernate.jdbc.use_get_generated_keys=false
+ spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
+ spring.jpa.properties.hibernate.jdbc.use_get_generated_keys=false
